--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/LOGO2.jpg" rel="icon" />
-    <link href="assets/img/LOGO2.jpg" rel="apple-touch-icon" />
+    <link href="assets/img/LOGO2.png" rel="icon" />
+    <link href="assets/img/LOGO2.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -54,32 +54,25 @@
           "
         >
           <a href="index.html"
-            ><img src="assets/img/LOGO1.png" alt="" width="125px"
+            ><img src="assets/img/LOGO2.png" alt="" width="55%"
           /></a>
-          <div class="logo">
-            <h1 class="text-light">
-              <a href="index.html"
-                ><span>Real Check Verification Services</span>
-                <p>Pvt. Ltd.</p></a
-              >
-            </h1>
-          </div>
+
           <nav id="navbar" class="navbar">
             <ul>
               <li>
-                <a class="nav-link scrollto active" href="index.html">Home</a>
-              </li>
-              <li><a class="nav-link scrollto" href="about.html">About</a></li>
-              <li>
-                <a class="nav-link scrollto" href="team.html">Choose Us</a>
+                <a class="nav-link scrollto" href="index.html">Home</a>
               </li>
               <li>
-                <a class="nav-link scrollto" href="services.html">Services</a>
+                <a class="nav-link scrollto active" href="about.html">About</a>
               </li>
               <li>
-                <a class="nav-link scrollto" href="services.html"
-                  >Life at RCVS</a
-                >
+                <a class="nav-link scrollto" href="services.html">Choose Us</a>
+              </li>
+              <li>
+                <a class="nav-link scrollto" href="portfolio.html">Services</a>
+              </li>
+              <li>
+                <a class="nav-link scrollto" href="team.html">Why RCVS</a>
               </li>
 
               <li>
@@ -225,150 +218,159 @@
         <div class="container" data-aos="fade-up">
           <div class="row content">
             <div class="col-lg-6" data-aos="fade-right">
-              <h2>Eum ipsam laborum deleniti velitena</h2>
-              <h3>
-                Voluptatem dignissimos provident quasi corporis voluptates sit
-                assum perenda sruen jonee trave
-              </h3>
+              <img
+                src="./assets/img/portfolio/internet-3484139_640.jpg"
+                style="width: 90%"
+                height="95%"
+              />
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
               <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum
-                dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum
+                At the heart of each Verifactian and at the core of our company
+                is a strong sense of integrity that helps us make the right
+                moral choices for your firm.
               </p>
               <ul>
                 <li>
-                  <i class="ri-check-double-line"></i> Ullamco laboris nisi ut
-                  aliquip ex ea commodo consequa
+                  <i class="ri-check-double-line"></i> Doing the right thing is
+                  a way of life at Verifacts. Our ethical viewpoint enables us
+                  to maintain transparency with our employees and our customer
+                  base as well.
                 </li>
                 <li>
-                  <i class="ri-check-double-line"></i> Duis aute irure dolor in
-                  reprehenderit in voluptate velit
+                  <i class="ri-check-double-line"></i> We allow for our
+                  employees to take ownership and decisions at Verifacts.
+                  Working as a team gives us a greater sense of belonging and
+                  recognition.
                 </li>
                 <li>
-                  <i class="ri-check-double-line"></i> Ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in
-                  reprehenderit in
+                  <i class="ri-check-double-line"></i> We have the ability to
+                  react quickly and act appropriately in every required
+                  situation. This enables us to sharpen our services and our
+                  after sales customer service.
+                </li>
+                <li>
+                  <i class="ri-check-double-line"></i>Customer focus is at the
+                  core of how we do business at Verifacts. Our menu of solutions
+                  is built entirely on offering our customers the perfect tools
+                  for business.
                 </li>
               </ul>
-              <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
             </div>
           </div>
         </div>
       </section>
       <!-- End About Us Section -->
 
-      <!-- ======= Our Team Section ======= -->
-      <section id="team" class="team section-bg">
+      <!-- ======= Team Section ======= -->
+      <section id="team" class="team">
         <div class="container">
-          <div class="section-title" data-aos="fade-up">
-            <h2>Our <strong>Team</strong></h2>
-            <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
-            </p>
-          </div>
-
           <div class="row">
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member" data-aos="fade-up">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-1.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-                <div class="member-info">
-                  <h4>Walter White</h4>
-                  <span>Chief Executive Officer</span>
-                </div>
+            <div class="col-lg-4">
+              <div class="section-title" data-aos="fade-right">
+                <h2>Team</h2>
+                <p>Special Members of our firms</p>
               </div>
             </div>
+            <div class="col-lg-8">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="member" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="pic">
+                      <img
+                        src="assets/img/team/model-6074857_640.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div class="member-info">
+                      <h4>Abhi manu</h4>
+                      <span>Chief Executive</span>
 
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member" data-aos="fade-up" data-aos-delay="100">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-2.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                      <div class="social">
+                        <a href=""><i class="ri-twitter-fill"></i></a>
+                        <a href=""><i class="ri-facebook-fill"></i></a>
+                        <a href=""><i class="ri-instagram-fill"></i></a>
+                        <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="member-info">
-                  <h4>Sarah Jhonson</h4>
-                  <span>Product Manager</span>
-                </div>
-              </div>
-            </div>
 
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member" data-aos="fade-up" data-aos-delay="200">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-3.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                <div class="col-lg-6 mt-4 mt-lg-0">
+                  <div class="member" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="pic">
+                      <img
+                        src="assets/img/team/model-6074857_640.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div class="member-info">
+                      <h4>Savita kalyan</h4>
+                      <span>Product Manager</span>
+
+                      <div class="social">
+                        <a href=""><i class="ri-twitter-fill"></i></a>
+                        <a href=""><i class="ri-facebook-fill"></i></a>
+                        <a href=""><i class="ri-instagram-fill"></i></a>
+                        <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="member-info">
-                  <h4>William Anderson</h4>
-                  <span>CTO</span>
-                </div>
-              </div>
-            </div>
 
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member" data-aos="fade-up" data-aos-delay="300">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-4.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                <div class="col-lg-6 mt-4">
+                  <div class="member" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="pic">
+                      <img
+                        src="assets/img/team/model-6074857_640.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div class="member-info">
+                      <h4>Dhan krishan yadav</h4>
+                      <span>CTO</span>
+
+                      <div class="social">
+                        <a href=""><i class="ri-twitter-fill"></i></a>
+                        <a href=""><i class="ri-facebook-fill"></i></a>
+                        <a href=""><i class="ri-instagram-fill"></i></a>
+                        <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="member-info">
-                  <h4>Amanda Jepson</h4>
-                  <span>Accountant</span>
+
+                <div class="col-lg-6 mt-4">
+                  <div class="member" data-aos="zoom-in" data-aos-delay="400">
+                    <div class="pic">
+                      <img
+                        src="assets/img/team/model-6074857_640.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div class="member-info">
+                      <h4>Mohna sachdeva</h4>
+                      <span>Accountant</span>
+
+                      <div class="social">
+                        <a href=""><i class="ri-twitter-fill"></i></a>
+                        <a href=""><i class="ri-facebook-fill"></i></a>
+                        <a href=""><i class="ri-instagram-fill"></i></a>
+                        <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- End Our Team Section -->
+      <!-- End Team Section -->
     </main>
     <!-- End #main -->
 
@@ -378,9 +380,11 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>REAL CHECK VERIFICATION SERVICES PRIVATE LIMITED</h3>
+              <h3 style="font-size: 1.25rem">
+                REAL CHECK VERIFICATION SERVICES Pvt. Ltd.
+              </h3>
               <p>
-                house no- 531, street no.4,<br />
+                House no- 531, street no.4,<br />
                 Ambedkar Nagar,Haiderpur- 110088<br />
                 India <br /><br />
                 <strong>Phone:</strong>9717127090,9911202915<br />
@@ -450,13 +454,12 @@
 
       <div class="container d-md-flex py-4">
         <div class="me-md-auto text-center text-md-start">
-          <div class="copyright">
+          <div class="copyright" style="text-align: center">
             &copy; Copyright
             <strong
-              ><span
-                >REAL CHECK VERIFICATION SERVICES PRIVATE LIMITED</span
-              ></strong
-            >. All Rights Reserved
+              ><span>REAL CHECK VERIFICATION SERVICES Pvt. Ltd.</span></strong
+            >
+            All Rights Reserved .
           </div>
         </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
