--- a/team.html
+++ b/team.html
@@ -9,8 +9,8 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/LOGO2.jpg" rel="icon" />
-    <link href="assets/img/LOGO2.jpg" rel="apple-touch-icon" />
+    <link href="assets/img/LOGO2.png" rel="icon" />
+    <link href="assets/img/LOGO2.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -54,39 +54,32 @@
           "
         >
           <a href="index.html"
-            ><img src="assets/img/LOGO1.png" alt="" width="125px"
+            ><img src="assets/img/LOGO2.png" alt="" width="55%"
           /></a>
-          <div class="logo">
-            <h1 class="text-light">
-              <a href="index.html"
-                ><span>Real Check Verification Services</span>
-                <p>Pvt. Ltd.</p></a
-              >
-            </h1>
-          </div>
+
           <nav id="navbar" class="navbar">
             <ul>
               <li>
-                <a class="nav-link scrollto active" href="index.html">Home</a>
+                <a class="nav-link scrollto" href="index.html">Home</a>
               </li>
               <li><a class="nav-link scrollto" href="about.html">About</a></li>
               <li>
-                <a class="nav-link scrollto" href="team.html">Choose Us</a>
+                <a class="nav-link scrollto" href="services.html">Choose Us</a>
               </li>
               <li>
-                <a class="nav-link scrollto" href="services.html">Services</a>
+                <a class="nav-link scrollto" href="portfolio.html">Services</a>
               </li>
               <li>
-                <a class="nav-link scrollto" href="services.html"
-                  >Life at RCVS</a
+                <a class="nav-link scrollto active" href="team.html"
+                  >Why RCVS</a
                 >
               </li>
 
               <li>
-                <a class="nav-link scrollto" href="#contact">Contact Us</a>
+                <a class="nav-link scrollto" href="contact.html">Contact Us</a>
               </li>
               <li>
-                <a class="getstarted scrollto" href="#about">Get Started</a>
+                <a class="getstarted scrollto" href="about.html">Get Started</a>
               </li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
@@ -206,125 +199,115 @@
     <!-- End Hero -->
 
     <main id="main">
-      <!-- ======= Breadcrumbs ======= -->
-      <section id="breadcrumbs" class="breadcrumbs">
+      <!-- ======= Team Section ======= -->
+      <section id="team" class="team">
         <div class="container">
-          <div class="d-flex justify-content-between align-items-center">
-            <h2>Team</h2>
-            <ol>
-              <li><a href="index.html">Home</a></li>
-              <li>Team</li>
-            </ol>
-          </div>
-        </div>
-      </section>
-      <!-- End Breadcrumbs -->
-
-      <!-- ======= Our Team Section ======= -->
-      <section id="team" class="team section-bg">
-        <div class="container">
-          <div class="section-title" data-aos="fade-up">
-            <h2>Our <strong>Team</strong></h2>
-            <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
-            </p>
-          </div>
-
           <div class="row">
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member" data-aos="fade-up">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-1.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-                <div class="member-info">
-                  <h4>Walter White</h4>
-                  <span>Chief Executive Officer</span>
-                </div>
+            <div class="col-lg-4">
+              <div class="section-title" data-aos="fade-right">
+                <h2>Team</h2>
+                <p>Special Members of our firms</p>
               </div>
             </div>
+            <div class="col-lg-8">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="member" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="pic">
+                      <img
+                        src="assets/img/team/model-6074857_640.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div class="member-info">
+                      <h4>Abhi manu</h4>
+                      <span>Chief Executive</span>
 
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member" data-aos="fade-up" data-aos-delay="100">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-2.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                      <div class="social">
+                        <a href=""><i class="ri-twitter-fill"></i></a>
+                        <a href=""><i class="ri-facebook-fill"></i></a>
+                        <a href=""><i class="ri-instagram-fill"></i></a>
+                        <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="member-info">
-                  <h4>Sarah Jhonson</h4>
-                  <span>Product Manager</span>
-                </div>
-              </div>
-            </div>
 
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member" data-aos="fade-up" data-aos-delay="200">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-3.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                <div class="col-lg-6 mt-4 mt-lg-0">
+                  <div class="member" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="pic">
+                      <img
+                        src="assets/img/team/model-6074857_640.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div class="member-info">
+                      <h4>Savita kalyan</h4>
+                      <span>Product Manager</span>
+
+                      <div class="social">
+                        <a href=""><i class="ri-twitter-fill"></i></a>
+                        <a href=""><i class="ri-facebook-fill"></i></a>
+                        <a href=""><i class="ri-instagram-fill"></i></a>
+                        <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="member-info">
-                  <h4>William Anderson</h4>
-                  <span>CTO</span>
-                </div>
-              </div>
-            </div>
 
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member" data-aos="fade-up" data-aos-delay="300">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-4.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                <div class="col-lg-6 mt-4">
+                  <div class="member" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="pic">
+                      <img
+                        src="assets/img/team/model-6074857_640.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div class="member-info">
+                      <h4>Dhan krishan yadav</h4>
+                      <span>CTO</span>
+
+                      <div class="social">
+                        <a href=""><i class="ri-twitter-fill"></i></a>
+                        <a href=""><i class="ri-facebook-fill"></i></a>
+                        <a href=""><i class="ri-instagram-fill"></i></a>
+                        <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="member-info">
-                  <h4>Amanda Jepson</h4>
-                  <span>Accountant</span>
+
+                <div class="col-lg-6 mt-4">
+                  <div class="member" data-aos="zoom-in" data-aos-delay="400">
+                    <div class="pic">
+                      <img
+                        src="assets/img/team/model-6074857_640.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div class="member-info">
+                      <h4>Mohna sachdeva</h4>
+                      <span>Accountant</span>
+
+                      <div class="social">
+                        <a href=""><i class="ri-twitter-fill"></i></a>
+                        <a href=""><i class="ri-facebook-fill"></i></a>
+                        <a href=""><i class="ri-instagram-fill"></i></a>
+                        <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- End Our Team Section -->
+      <!-- End Team Section -->
     </main>
     <!-- End #main -->
 
@@ -334,18 +317,20 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Company</h3>
+              <h3 style="font-size: 1.25rem">
+                REAL CHECK VERIFICATION SERVICES Pvt. Ltd.
+              </h3>
               <p>
-                A108 Adam Street <br />
-                New York, NY 535022<br />
-                United States <br /><br />
-                <strong>Phone:</strong> +1 5589 55488 55<br />
-                <strong>Email:</strong> info@example.com<br />
+                House no- 531, street no.4,<br />
+                Ambedkar Nagar,Haiderpur- 110088<br />
+                India <br /><br />
+                <strong>Phone:</strong>9717127090,9911202915<br />
+                <strong>Email:</strong> info@realcheckservices.in<br />
               </p>
             </div>
 
             <div class="col-lg-2 col-md-6 footer-links">
-              <h4>Useful Links</h4>
+              <h4>Quick Links</h4>
               <ul>
                 <li>
                   <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
@@ -371,22 +356,16 @@
               <h4>Our Services</h4>
               <ul>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Web Design</a>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="#">Board Of Directors</a>
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a href="#">Web Development</a>
+                  <a href="#">Why Choose Real Check Verification service</a>
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a href="#">Product Management</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Marketing</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Graphic Design</a>
+                  <a href="#">Life at Real Check Verification service</a>
                 </li>
               </ul>
             </div>
@@ -394,8 +373,10 @@
             <div class="col-lg-4 col-md-6 footer-newsletter">
               <h4>Join Our Newsletter</h4>
               <p>
-                Tamen quem nulla quae legam multos aute sint culpa legam noster
-                magna
+                By submitting this form, you agree to receive promotional
+                material from Real Check Verification service Pvt. Ltd. You can
+                chose to unsubscribe at any later date. Your privacy is
+                important and we will not share your details elsewhere.
               </p>
               <form action="" method="post">
                 <input type="email" name="email" /><input
@@ -410,16 +391,12 @@
 
       <div class="container d-md-flex py-4">
         <div class="me-md-auto text-center text-md-start">
-          <div class="copyright">
-            &copy; Copyright <strong><span>Company</span></strong
-            >. All Rights Reserved
-          </div>
-          <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          <div class="copyright" style="text-align: center">
+            &copy; Copyright
+            <strong
+              ><span>REAL CHECK VERIFICATION SERVICES Pvt. Ltd.</span></strong
+            >
+            All Rights Reserved .
           </div>
         </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
